--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
 @plugin "daisyui" {
-  themes: light --default, dark --prefersdark, nord;
+  themes: light --default, dark --prefersdark, nord, retro, synthwave, dark,
+    lemonade, valentine, forest, coffee, pastel;
 }
